--- a/templates/compose.html
+++ b/templates/compose.html
@@ -7,7 +7,12 @@
 {% block body %}
   <form action="{{ request.path }}" method="post" class="compose">
     <div style="margin-bottom:5px"><input name="title" type="text" class="title" value="{{ escape(entry.title) if entry else "" }}"/></div>
-    <div style="margin-bottom:5px"><textarea name="markdown" rows="30" cols="40" class="markdown">{{ escape(entry.body) if entry else "" }}</textarea></div>
+    <div style="margin-bottom:5px"><textarea name="body" rows="30" cols="40" class="markdown">{{ escape(entry.body) if entry else "" }}</textarea></div>
+    <b>Input format</b>: <select name="body_format">
+        <option value="plain" selected="{{ 'selected' if entry.body_format else ''}}">Plain</option>
+        <option value="markdown" selected="{{ 'selected' if entry.body_format else ''}}">Markdown</option>
+        <option value="rst" selected="{{ 'selected' if entry.body_format else ''}}">RST</option>
+    </select>
     <div>
       <div style="float:right"><a href="http://daringfireball.net/projects/markdown/syntax">{{ _("Syntax documentation") }}</a></div>
       <input type="submit" value="{{ _("Save changes") if entry else _("Publish post") }}" class="submit"/>
