--- a/static/blog.css
+++ b/static/blog.css
@@ -15,9 +15,11 @@
  */
 
 body {
+  width: 640px;
+  margin-left: auto;
+  margin-right: auto;
   background: white;
   color: black;
-  margin: 0;
   margin-bottom: 25px;
 }
 
@@ -153,6 +155,12 @@ a:hover {
 
 .entry .date {
   margin-top: 3px;
+}
+
+.date {
+  font-size: 9pt;
+  font-family: verdana, sans-serif;
+  font-style: italic;
 }
 
 .entry .body {
