--- a/templates/entry.html
+++ b/templates/entry.html
@@ -1,7 +1,7 @@
-{% extends "sidebar.html" %}
+{% extends "base.html" %}
 
 {% block title %}{{ escape(entry.title) }} - {{ escape(handler.settings["blog_title"]) }}{% end %}
 
-{% block content %}
+{% block body %}
   {{ modules.Entry(entry, show_comments=True) }}
 {% end %}
