--- a/templates/compose.html
+++ b/templates/compose.html
@@ -9,9 +9,9 @@
     <div style="margin-bottom:5px"><input name="title" type="text" class="title" value="{{ escape(entry.title) if entry else "" }}"/></div>
     <div style="margin-bottom:5px"><textarea name="body" rows="30" cols="40" class="markdown">{{ escape(entry.body) if entry else "" }}</textarea></div>
     <b>Input format</b>: <select name="body_format">
-        <option value="plain" selected="{{ 'selected' if entry.body_format else ''}}">Plain</option>
-        <option value="markdown" selected="{{ 'selected' if entry.body_format else ''}}">Markdown</option>
-        <option value="rst" selected="{{ 'selected' if entry.body_format else ''}}">RST</option>
+        <option value="plain" selected="{{ 'selected' if entry else ''}}">Plain</option>
+        <option value="markdown" selected="{{ 'selected' if entry else ''}}">Markdown</option>
+        <option value="rst" selected="{{ 'selected' if entry else ''}}">RST</option>
     </select>
     <div>
       <div style="float:right"><a href="http://daringfireball.net/projects/markdown/syntax">{{ _("Syntax documentation") }}</a></div>
